--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body{
     background-color: black;
 }
 
+img{
+    margin-left: 37rem;
+    margin-top: 3rem;
+}
+
 .btn{
     margin-left: 40rem;
     margin-top: 5rem;
